feat: 积分优化 积分历史记录
